--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a href="#secSchedule" class="smooth_scroll">Schedule</a></li>
 				<li><a href="#secVenue" class="smooth_scroll">Venue</a></li>
 				<li><a href="#secPrize" class="smooth_scroll">Prize</a></li>
-				<li><a href="#secRegister" class="smooth_scroll">Register</a></li>
+				<li><a href="#secSchedule" class="smooth_scroll">Roadmap</a></li>
 				<li><a href="https://discord.com/download" style="color: #ffc613;" target="_blank">Download Discord</a></li>
 			</ul>
 		</div>
