--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
 		<div class="sec-content">
 			<h2>About</h2>
 			<img id="imgAbout" src="images/pubg_car.png" alt="PUBG Car">
-			<p>PUBG MOBILE CHAMPIONSHIP 2025 is a PUBG MOBILE tournament exclusively for PUBG PLAYERS featuring a total  prize pool of over Few Lakh NPR.<br>
-				 Teams will qualify based on the match results. Play to win and play for fun! A competition of both skills and popularity! <br>
-				 Compete over teams to qualify for the LAN Final Event! Winning players from all participants and we will bring in the sponsors for a gaming event has ever seen.<br>
-				  So what are you waiting for? Just go and register!<br>
+			
 
-				  <p>>About Us – BASW Club of BKC
+				  <p>About Us – BASW Club of BKC
 				  Welcome to the BASW Charity Mobile Game Tournament, proudly organized by the BASW Club of BKC! 🎮✨<br>
 				  
 				  We're a passionate student-led club driven by creativity, community spirit, and a shared love for gaming. <br>
@@ -55,7 +52,7 @@
 				  This tournament isn’t just about winning—it's about making an impact. Whether you're part of our college or an outsider, everyone is welcome to join the fun and contribute to charity.
 				  <br>
 				  Games & Entry Fees:
-				  🔫 PUBG Per Team – Rs. 500 per team <br>
+				  🔫 PUBG MOBILE– Rs. 500 per team <br>
 				  ⚽ E-Football – Rs. 200 per person
 				  <br>
 				  How to Join:
