--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				<a href="javascript:void(0)" target="_blank"><img src="images/social/youtube.png" alt="Youtube"></a>
 			</div>
 			<div class="footer-copyright">
-				<p>&copy; Abhishek Dhakal</p>
+				<p>&copy; Made by Deepti Acharya</p>
 			</div>
 		</div>
 	</footer>
