--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					</tr>
 					<tr>
 						<td>Registraion</td>
-						<td>30 chaitra</td>
+						<td>Baisakh 3</td>
 						<td>7 Baisakh</td>
 					</tr>
 					<tr>
